--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-fastapi==0.68.0
-uvicorn==0.15.0
-paho-mqtt==1.5.1
+fastapi
+uvicorn[standard]
+paho-mqtt
+scikit-learn
+pandas
+numpy
+matplotlib
+seaborn
+celery
+aioredis
+python-multipart
